# yass

./: .cirrus.yml  .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  .ycm_extra_conf.py  BUILDING.md  CLANG_REVISION  CMakeLists.txt  COPYING  CRASHPAD_COMMIT  Doxygen.cfg  LAST_CHANGE  LICENSE.cmake.in  LICENSE.tmpl  LICENSE_1_0.txt  Makefile  PACKAGING.md  README.md  TAG  rpmlintrc  sbuildrc  yass-redir.old.service  yass-redir.service  yass-server.json.sample  yass-server.old.service  yass-server.service  yass.json.sample  yass.nsi  yass.old.service  yass.rc  yass.service  yass.spec  yass.spec.in  yass.wxs
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: binary.yml  build.yml  clang-tidy.yml  compiler.yml  linux.yml  macos.yml  releases-android-binary.yml  releases-deb.yml  releases-flatpak-binary.yml  releases-flatpak.yml  releases-freebsd-binary.yml  releases-ios.yml  releases-linux-binary.yml  releases-macos.yml  releases-mingw-new.yml  releases-mingw.yml  releases-openwrt-binary.yml  releases-publish.yml  releases-rpm.yml  releases-src.yml  releases-windows.yml  releases.yml  sanitizers.yml  ubuntu.yml  update-manager.yml  windows.yml
.tx/: config
LICENSES/: LICENSE.cmake.in
android/: README.md  build.gradle  gradle.properties  settings.gradle
android/keystore/: debug_keystore.jks
android/yass/: build.gradle
cmake/: CompilePo.cmake  CrossCompile.cmake  ExternalProjectUtils.cmake  FindMFCUnicode.cmake  NativeTool.cmake  Protobuf.cmake  UniversalBuild.cmake  config-ix.cmake
debian/: changelog  control  copyright  pkg-config-crosswrapper  rules  yass-client.install  yass-server.install  yass.install
doc/: Makefile  yass_cli.1  yass_cli.md  yass_server.1  yass_server.md
docker/: aarch64-alpine320.Dockerfile  alpine318.Dockerfile  alpine319.Dockerfile  alpine320.Dockerfile  armhf-alpine320.Dockerfile  centos7.Dockerfile  centos8.Dockerfile  centos9.Dockerfile  debian10.Dockerfile  debian11.Dockerfile  debian9.Dockerfile  fedora35.Dockerfile  fedora36.Dockerfile  fedora37.Dockerfile  fedora38.Dockerfile  fedora39.Dockerfile  i386-alpine320.Dockerfile  opensuse15.Dockerfile  ubuntu16.04.Dockerfile  ubuntu18.04.Dockerfile  ubuntu20.04.Dockerfile
flatpak/: .gitignore  Makefile  io.github.chilledheart.yass.appdata.xml.cmake.in  io.github.chilledheart.yass.metainfo.xml.cmake.in  io.github.chilledheart.yass.yml  it.gui.yass.yml  it.gui.yass.yml.tmpl
harmony/: .gitignore  Makefile  README.md  build-profile.json5  oh-package-lock.json5  oh-package.json5
harmony/AppScope/: app.json5
harmony/entry/: oh-package-lock.json5  oh-package.json5
harmony/hvigor/: hvigor-config.json5
openwrt/: Makefile.tmpl
openwrt/files/: config.json  config.json.sample  redir.json.sample  yass_cli.init  yass_redir.init
scripts/: aarch64-unknown-linux-ohos-clang++.sh  aarch64-unknown-linux-ohos-clang.sh  alignment.sh  armv7-unknown-linux-ohos-clang++.sh  armv7-unknown-linux-ohos-clang.sh  bpf.rs  build-boringssl.bat  build-boringssl.sh  build-crashpad.sh  build-curl.bat  build-deb-gtkmm.sh  build-deb.sh  build-hap.sh  build-mingw.sh  build-rpm.sh  build-rust.sh  build-src.sh  build-tun2proxy.sh  build-xp.bat  build.bat  build.py  build_workflow.bat  callxp-x64.cmd  callxp-x86.cmd  crashpad_mips.patch  download-clang-prebuilt-binaries.py  download-curl-mingw.bat  download-curl-mingw.sh  download-curl-msvc.bat  download-toolchain-mingw.bat  download-toolchain.bat  fcntl.rs  get-android-sys.sh  get-debian-name.py  install-sysroot-android.py  install-sysroot-freebsd.py  install-sysroot.py  libstdc++-el7.sh  libstdc++-symbols.ver  libstdc++-symbols.ver.README  (+15 more)
src/: base64.c  blacklist.txt  channel.hpp  cipher.cpp  cipher.hpp  compiler_test.cpp  config.cpp  config.hpp  connection.hpp  connection_factory.hpp  content_server.hpp  crashpad_helper.cpp  crashpad_helper.hpp  delay_load_failure_hook_win.cc  feature.h.in  gui_variant.h.in  iobuf.cpp  iobuf.hpp  local.cpp  mimalloc.cc  network.cpp  network.hpp  network_test.cpp  protocol.hpp  service.hpp  socks4.hpp  socks5.hpp  socks5_connection.cpp  socks5_connection.hpp  socks5_factory.hpp  socks5_request.hpp  socks5_request_parser.hpp  socks5_server.hpp  ss.hpp  ss_benchmark.cpp  ss_benchmark.mm  ss_connection.cpp  ss_connection.hpp  ss_stream.hpp  ss_test.cpp  (+6 more)
src/android/: export.lds  jni.cpp  jni.hpp  main.cc  utils.cpp  utils.hpp  yass.cpp  yass.hpp
src/cli/: cli.cpp  cli_connection.cpp  cli_connection.hpp  cli_connection_stats.cpp  cli_connection_stats.hpp  cli_server.hpp  cli_worker.cpp  cli_worker.hpp  socks5_connection.cpp  socks5_connection.hpp  socks5_connection_stats.cpp  socks5_connection_stats.hpp  socks5_factory.hpp  socks5_server.hpp
src/config/: config.cpp  config.hpp  config_core.cpp  config_core.hpp  config_export.hpp  config_impl.cpp  config_impl.hpp  config_impl_apple.hpp  config_impl_apple.mm  config_impl_local.hpp  config_impl_posix.hpp  config_impl_windows.hpp  config_network.cpp  config_network.hpp  config_ptype.cpp  config_ptype.hpp  config_test.cpp  config_tls.cpp  config_tls.hpp  config_version.cpp
src/core/: address_family.cpp  address_family.hpp  asio.cpp  asio.hpp  asio_throw_exceptions.hpp  atl.hpp  atl_throw.cpp  atl_throw.hpp  atomic_ref_count.hpp  base64.cpp  base64.hpp  basictypes.h  bits.hpp  c-ares.cpp  c-ares.hpp  c-ares_test.cpp  check.cpp  check.hpp  check_op.cpp  check_op.hpp  checked_iterators.hpp  checked_math.hpp  checked_math_impl.hpp  cipher.cpp  cipher.hpp  cipher_test.cpp  clamped_math.hpp  clamped_math_impl.hpp  common_posix.hpp  compiler_specific.hpp  completion_once_callback.hpp  contains.hpp  contiguous_iterator.hpp  cxx17_backports.hpp  cxx20_to_address.hpp  debug.cpp  debug.hpp  escape.cpp  escape.hpp  foundation_util.hpp  (+119 more)
src/crypto/: aead_base_decrypter.cpp  aead_base_decrypter.hpp  aead_base_encrypter.cpp  aead_base_encrypter.hpp  aead_evp_decrypter.cpp  aead_evp_decrypter.hpp  aead_evp_encrypter.cpp  (+55 more)
tools/: build  build.go  build_freebsd.go  build_os.go  development.plist  go.mod  go.sum
(+317 files in other folders)
